[package]
name = "byte"
version = "0.0.2"
authors = ["Japroz-Saini <sainijaproz@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The JavaScript runtime that aims for productivity and ease" # copied from github
readme = "README.md"
repository = "https://github.com/byte-js/byte"
keywords = ["v8", "javascript"]
publish = false

[dependencies]
rusty_v8 = "0.15.0"
dirs = "3.0.1"
colored = "2"
# jstime = "0.20.1"

[package.metadata.deb]
section = "interpreters"
